# agent_manip

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: dashboard.html
docs/: prd.md
rust_reference/: clippy_cheatsheet.md
src/: app.rs  cli.rs  collect.rs  daemon.rs  db.rs  error.rs  main.rs  network.rs  paths.rs  report.rs  serve.rs  triage.rs  ui.rs
src/db/: mod.rs
src/error/: mod.rs
src/log_reader/: mod.rs
src/service/: macos.rs
src/ui/: mod.rs
src_old/: main.rs
src_old/db/: mod.rs
src_old/service/: linux.rs  macos.rs  mod.rs  windows.rs
src_old/ui/: mod.rs
