[package]
name = "agent_manip"
version = "0.1.0"
edition = "2021"

[dependencies]
# UI Framework
eframe = "0.31.1"         # egui framework for cross-platform GUI
egui = "0.31.1"          # immediate mode GUI library

# Database
rusqlite = { version = "0.30.0", features = ["bundled"] }  # SQLite wrapper
tokio = { version = "1.35.0", features = ["full"] }        # Async runtime

# Logging and file handling
log = "0.4.20"
env_logger = "0.10.1"
chrono = "0.4.31"

# Error handling
anyhow = "1.0.75"
thiserror = "1.0.50"

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# File dialog
rfd = "0.12.1"
#[cfg(windows)]
winapi = "0.3.9"

# File system operations
dirs = "5.0.1"

[dev-dependencies]
tempfile = "3.10.1"  # For temporary files in tests

[build-dependencies]
cc = "1.0" 
