[package]
name = "lsman"
version = "0.1.0"
edition = "2021"
description = "A terminal-based TUI application for monitoring and managing the LsiAgent"

[dependencies]
# TUI Framework
ratatui = "0.26.0"       # Terminal UI library
crossterm = "0.27.0"      # Terminal handling and input events

# System and Process Monitoring
sysinfo = "0.30.0"        # System and process monitoring

# Async Runtime and Networking
tokio = { version = "1.35.0", features = ["full"] }        # Async runtime
tokio-tungstenite = "0.20.1"  # WebSocket client for connection testing

# Process Signal Handling
signal-hook = "0.3.17"    # Process signal handling for daemon management

# Serialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

# Error Handling
anyhow = "1.0.75"
thiserror = "1.0.50"

# Logging
log = "0.4.20"
env_logger = "0.10.1"

# Additional utilities
chrono = "0.4.31"
dirs = "5.0.1"
rand = "0.8.5"
libc = "0.2.155"

[dev-dependencies]
tempfile = "3.10.1"  # For temporary files in tests

[build-dependencies]
cc = "1.0" 
