[package]
name = "lsman"
version = "0.2.0"
edition = "2021"
description = "CLI + TUI for debugging and managing the LSI (SysTrack) agent"

[dependencies]
# TUI Framework
ratatui = "0.26.0"       # Terminal UI library
crossterm = "0.27.0"      # Terminal handling and input events

# CLI
clap = { version = "4.5", features = ["derive"] }

# System and Process Monitoring
sysinfo = "0.30.0"        # System and process monitoring

# Async Runtime
tokio = { version = "1.35.0", features = ["full"] }

# Error Handling
anyhow = "1.0.75"

# Logging
log = "0.4.20"
env_logger = "0.10.1"

# Additional utilities
chrono = "0.4.31"
libc = "0.2.155"

[dev-dependencies]
tempfile = "3.10.1"  # For temporary files in tests
